{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 159,
  "lineage": "f190c53f-d023-21b5-fc26-f5decf1fce9a",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:505101208211:vpc/vpc-c68101af",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-130a8a7a",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-4344c42a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-c68101af",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-513ebe38",
            "owner_id": "505101208211"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:505101208211:loadbalancer/app/Rensair-Prod-ALB/45ad5c75945ffb51",
            "arn_suffix": "app/Rensair-Prod-ALB/45ad5c75945ffb51",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Rensair-Prod-ALB-1826458805.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:505101208211:loadbalancer/app/Rensair-Prod-ALB/45ad5c75945ffb51",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Rensair-Prod-ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ddebe8ddb9a4e440"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-1712947e"
              },
              {
                "subnet_id": "subnet-3e1dbc45"
              }
            ],
            "subnets": [
              "subnet-1712947e",
              "subnet-3e1dbc45"
            ],
            "tags": {
              "Environment": "Rensair_Prod",
              "Name": "Rensair_Prod_ALB"
            },
            "tags_all": {
              "Environment": "Rensair_Prod",
              "Name": "Rensair_Prod_ALB"
            },
            "vpc_id": "vpc-c68101af",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "aws_default_subnet.default_az1",
            "aws_default_subnet.default_az2",
            "aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:505101208211:subnet/subnet-1712947e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-1712947e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "505101208211",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-c68101af"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:505101208211:subnet/subnet-3e1dbc45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-3e1dbc45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "505101208211",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-c68101af"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ec2_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0418fca8c2a7ae881",
            "domain": "vpc",
            "id": "eipalloc-0418fca8c2a7ae881",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-16-16-33-110.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.16.33.110",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Rensair_Prod",
              "Name": "Rensair_Prod_Elastic_IP"
            },
            "tags_all": {
              "Environment": "Rensair_Prod",
              "Name": "Rensair_Prod_Elastic_IP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0440e5026412ff23f",
            "arn": "arn:aws:ec2:eu-north-1:505101208211:instance/i-0e3532ecfc9ac5dc9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e3532ecfc9ac5dc9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "c5a.xlarge",
            "ipv6_address_count": 0,
            "key_name": "rensair-prod",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0211bf424f059bd9d",
            "private_dns": "ip-172-31-24-9.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.24.9",
            "public_dns": "ec2-13-51-161-226.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.51.161.226",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 750,
                "throughput": 0,
                "volume_id": "vol-01b03e10590604fc4",
                "volume_size": 250,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Rensair Prod Security Group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-1712947e",
            "tags": {
              "Environment": "Rensair_Prod",
              "Name": "Rensair_Prod_Keypair"
            },
            "tags_all": {
              "Environment": "Rensair_Prod",
              "Name": "Rensair_Prod_Keypair"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ae1aa9a587ae5c88"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2_keypair",
            "aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:505101208211:listener/app/Rensair-Prod-ALB/45ad5c75945ffb51/c1f38f5db42570db",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:505101208211:targetgroup/Rensair-Target-Group/27694e1b1dea5668",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:505101208211:listener/app/Rensair-Prod-ALB/45ad5c75945ffb51/c1f38f5db42570db",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:505101208211:loadbalancer/app/Rensair-Prod-ALB/45ad5c75945ffb51",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Environment": "Rensair_Prod",
              "Name": "Rensair_Prod_HTTP_Listener"
            },
            "tags_all": {
              "Environment": "Rensair_Prod",
              "Name": "Rensair_Prod_HTTP_Listener"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb",
            "aws_default_subnet.default_az1",
            "aws_default_subnet.default_az2",
            "aws_lb_target_group.alb_tg",
            "aws_security_group.alb_sg",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:505101208211:listener/app/Rensair-Prod-ALB/45ad5c75945ffb51/5ea8a63aed2eef27",
            "certificate_arn": "arn:aws:acm:eu-north-1:505101208211:certificate/9d7d74ef-25e0-4087-a8d2-7ddc32ce3c99",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:505101208211:targetgroup/Rensair-Target-Group/27694e1b1dea5668",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:505101208211:listener/app/Rensair-Prod-ALB/45ad5c75945ffb51/5ea8a63aed2eef27",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:505101208211:loadbalancer/app/Rensair-Prod-ALB/45ad5c75945ffb51",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {
              "Environment": "Rensair_Prod",
              "Name": "Rensair_Prod_HTTPS_Listener"
            },
            "tags_all": {
              "Environment": "Rensair_Prod",
              "Name": "Rensair_Prod_HTTPS_Listener"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.certificate",
            "aws_alb.alb",
            "aws_default_subnet.default_az1",
            "aws_default_subnet.default_az2",
            "aws_lb_target_group.alb_tg",
            "aws_security_group.alb_sg",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:505101208211:targetgroup/Rensair-Target-Group/27694e1b1dea5668",
            "arn_suffix": "targetgroup/Rensair-Target-Group/27694e1b1dea5668",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 20,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:505101208211:targetgroup/Rensair-Target-Group/27694e1b1dea5668",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Rensair-Target-Group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "Rensair_Prod",
              "Name": "Rensair_Prod_TargetGroup"
            },
            "tags_all": {
              "Environment": "Rensair_Prod",
              "Name": "Rensair_Prod_TargetGroup"
            },
            "target_type": "instance",
            "vpc_id": "vpc-c68101af"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "alb_targetgroup_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-north-1:505101208211:targetgroup/Rensair-Target-Group/27694e1b1dea5668-20220909133012348500000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:505101208211:targetgroup/Rensair-Target-Group/27694e1b1dea5668",
            "target_id": "i-0e3532ecfc9ac5dc9"
          },
          "dependencies": [
            "aws_instance.ec2",
            "aws_key_pair.ec2_keypair",
            "aws_lb_target_group.alb_tg",
            "aws_security_group.ec2_sg",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:505101208211:security-group/sg-0ddebe8ddb9a4e440",
            "description": "Rensair Prod ALB Security Group Created on Sep 09 2022",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ddebe8ddb9a4e440",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Https access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Rensair Prod ALB Security Group",
            "name_prefix": "",
            "owner_id": "505101208211",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Rensair_Prod",
              "Name": "Rensair_Prod_ALB_SecurityGroup"
            },
            "tags_all": {
              "Environment": "Rensair_Prod",
              "Name": "Rensair_Prod_ALB_SecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-c68101af"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:505101208211:security-group/sg-0ae1aa9a587ae5c88",
            "description": "Rensair Prod Security Group Created on Sep 09 2022",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ae1aa9a587ae5c88",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from the internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Rensair Prod Security Group",
            "name_prefix": "",
            "owner_id": "505101208211",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Rensair_Prod",
              "Name": "Rensair_Prod_SecurityGroup"
            },
            "tags_all": {
              "Environment": "Rensair_Prod",
              "Name": "Rensair_Prod_SecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-c68101af"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}